<resources>


    <string name="No">No</string>
    <string name="Yes">Yes</string>

    <string name="app_name">Charging Animation</string>
    <string name="ad_attribution">Sponsored</string>

    <string name="close_button_default_text" />
    <string name="close_button_type_face">Helvetica</string>
    <string name="default_notification_channel_name">Now playing</string>

    <string name="like">Do you like our app?</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nav_policy">Privacy Policy</string>
    <string name="nav_rate">Rate us</string>
    <string name="nav_share">Share</string>
    <string name="overlay">Overlay permission required to display animation</string>


    <string name="search_menu_title">Search</string>
    <string name="skip_to_next_item_button_content_description">Skip to next item</string>
    <string name="skip_to_previous_item_button_content_description">Skip to previous item</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="string_apply">Apply</string>
    <string name="string_appreciate">Appreciate us with good ratings</string>
    <string name="string_closing_method">Closing method</string>
    <string name="string_confirm_anim">Are you sure, settings will be saved?</string>
    <string name="string_done">Done</string>
    <string name="string_dur">Play duration</string>
    <string name="string_ex">Exit</string>
    <string name="string_exit">Do you want to exit</string>
    <string name="string_finish">Finish</string>
    <string name="string_grant">Grant following\n2 required permissions</string>
    <string name="string_grant_mi">Grant the following permissions\n for Xiaomi device</string>
    <string name="string_home">Display popup window while running in background</string>
    <string name="string_ignore">Ignore battery optimizations</string>
    <string name="string_later">Later</string>
    <string name="string_lock">Show on lock screen</string>
    <string name="string_next">Next</string>
    <string name="string_no">No</string>
    <string name="string_permit">Permit drawing over other apps</string>
    <string name="string_play_sound">Play sound with animation</string>
    <string name="string_privacy">Privacy Policy</string>
    <string name="string_rate">Rate now</string>
    <string name="string_select">Select Animation</string>
    <string name="string_set">Set your favourite\n Animation</string>
    <string name="string_set_now">Set now</string>
    <string name="string_settings">Settings</string>
    <string name="string_show">Show only on lock screen</string>
    <string name="string_show_anim">Show animation</string>
    <string name="string_show_per">Show battery percentage</string>
    <string name="string_shown">Charging animation will be shown when charger is connected</string>
    <string name="string_title">Charging Animation</string>
    <string name="string_tutorial">Tutorial</string>
    <string name="string_yes">Yes</string>
</resources>
