<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_toolbar"
        android:minHeight="?attr/actionBarSize"
        app:contentInsetStartWithNavigation="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:text="@string/string_ex"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/rl_native_ad_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layoutExit"
        android:layout_below="@+id/toolbar"
        android:background="@color/white"
        android:gravity="center">

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layoutExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_15sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/regular"
            android:text="@string/string_exit"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_13ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="15dp"
            android:gravity="bottom|right|center_vertical|center_horizontal|center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/No"
                android:layout_width="@dimen/_65sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@color/white"
                android:fontFamily="@font/regular"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/No"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp" />

            <TextView
                android:id="@+id/Yes"
                android:layout_width="@dimen/_65sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@color/white"
                android:fontFamily="@font/regular"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/Yes"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
