<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/layoutActionBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/color_bg"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp" />

    <RelativeLayout
        android:id="@+id/lout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutActionBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="15"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:text="@string/string_grant"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="45"
                android:padding="@dimen/_30sdp"
                android:src="@drawable/tut1" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/native_ad_container"
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:padding="1dp" />

        <com.smarteist.autoimageslider.SliderView
            android:id="@+id/imageSlider"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_margin="5dp"
            android:visibility="gone"
            app:sliderAnimationDuration="600"
            app:sliderAutoCycleDirection="back_and_forth"
            app:sliderAutoCycleEnabled="true"
            app:sliderIndicatorAnimationDuration="600"
            app:sliderIndicatorGravity="top"
            app:sliderIndicatorMargin="15dp"
            app:sliderIndicatorOrientation="horizontal"
            app:sliderIndicatorPadding="3dp"
            app:sliderIndicatorRadius="2dp"
            app:sliderIndicatorSelectedColor="#5a5a5a"
            app:sliderIndicatorUnselectedColor="#fff"
            app:sliderScrollTimeInSec="1"
            app:sliderStartAutoCycle="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/banner1"
        android:layout_below="@+id/lout"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"
        android:weightSum="100">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="50"
            app:cardBackgroundColor="@color/color_tut_card"
            app:cardCornerRadius="@dimen/_12sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp"
                android:weightSum="2">

                <RelativeLayout
                    android:id="@+id/layoutDrawing"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/regular"
                        android:text="@string/string_permit"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13ssp" />

                    <ToggleButton
                        android:id="@+id/toggleDrawing"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/cb_selector"
                        android:textOff=""
                        android:textOn="" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/layoutBattery"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/regular"
                        android:text="@string/string_ignore"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13ssp" />

                    <ToggleButton
                        android:id="@+id/toggleBattery"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/cb_selector"
                        android:textOff=""
                        android:textOn="" />
                </RelativeLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="35"
            android:gravity="center">

            <TextView
                android:id="@+id/txtNext"
                android:layout_width="@dimen/_110sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/rounded_bg"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:text="@string/string_next"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/banner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <RelativeLayout
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center" />

    </RelativeLayout>
</RelativeLayout>
